--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/bahmutov/tdd-calc#readme",
   "devDependencies": {
+    "cypress": "^13.15.1",
     "prettier": "^3.3.3"
   }
 }
