--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/bahmutov/tdd-calc#readme",
   "devDependencies": {
     "cypress": "^13.15.1",
+    "cypress-watch-and-reload": "^1.10.16",
     "prettier": "^3.3.3"
   }
 }
