--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   },
   "homepage": "https://github.com/bahmutov/tdd-calc#readme",
   "devDependencies": {
+    "color-convert": "^2.0.1",
+    "color-string": "^1.9.1",
     "cypress": "^13.15.1",
     "cypress-real-events": "^1.13.0",
     "cypress-watch-and-reload": "^1.10.16",
