--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cypress-real-events": "^1.13.0",
     "cypress-watch-and-reload": "^1.10.16",
     "prettier": "^3.3.3",
+    "typescript": "^5.6.3",
     "wick-a11y": "^1.2.2"
   }
 }
