--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -8,7 +8,12 @@
     ] /* Specify type package names to be included without being referenced in a source file. */,
     "esModuleInterop": true /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */,
     "forceConsistentCasingInFileNames": true /* Ensure that casing is correct in imports. */,
-    "strict": true /* Enable all strict type-checking options. */
+    "strict": true /* Enable all strict type-checking options. */,
+    "skipLibCheck": true,
+    "lib": [
+      "es2023",
+      "dom"
+    ] /* Specify a set of bundled library declaration files that describe the target runtime environment. */
   },
   "include": ["./e2e/**/*.ts"]
 }
