--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "cypress run",
-    "lint": "tsc --project ./cypress/tsconfig.json --noEmit"
+    "lint": "tsc --project ./cypress/tsconfig.json --noEmit",
+    "clean": "rm -rf .nyc_output coverage"
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,7 @@
   },
   "homepage": "https://github.com/bahmutov/tdd-calc#readme",
   "devDependencies": {
+    "@bahmutov/cypress-code-coverage": "^2.7.1",
     "color-convert": "^2.0.1",
     "color-string": "^1.9.1",
     "cypress": "^13.15.1",
